--- a/src/src/app/app.component.html
+++ b/src/src/app/app.component.html
@@ -7,10 +7,10 @@
   <app-header></app-header>
 </div>
 <div flexLayout="row"fxLayoutGap="20px" style="clear:left">
-  <div fxFlex="80%" id="part1">
+  <!-- <div fxFlex="80%" id="part1"> -->
     <router-outlet></router-outlet>
-  </div>
-  <div fxFlex="20%" id="part2">
+  <!-- </div> -->
+  <!-- <div fxFlex="20%" id="part2">
     <app-cart></app-cart>
-  </div>
+  </div> -->
 </div>
