--- a/src/src/app/dashboard/customer/customer.component.html
+++ b/src/src/app/dashboard/customer/customer.component.html
@@ -2,6 +2,8 @@
   <app-header></app-header>
 </div> -->
 <br>
+<div fxLayout="row" fxLayoutGap="10px">
+  <div fxFlex="80%">
 <div fxLayout="row"
   class="container"
   fxLayout
@@ -55,4 +57,9 @@ fxLayoutGap.xs="0">
               </mat-card-actions>
           </mat-card>
     </div>
+</div>
+</div>
+<div fxFlex="20%">
+  <app-cart></app-cart>
+</div>
 </div>
