--- a/src/src/app/auth/login/login.component.html
+++ b/src/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <form fxLayout="column" [formGroup]="loginForm"  fxLayoutGap="10px" (ngSubmit)="onSubmit(loginForm)">
         <mat-form-field class="demo-full-width" >  
-          <input matInput placeholder="Email" formControlName="email"[(ngModel)]="email">  
+          <input matInput placeholder="Email" formControlName="email">  
         </mat-form-field>  
         <mat-error [hidden]="loginForm.get('email').valid && loginForm.get('email').untouched">  
           <span *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched">
@@ -10,9 +10,9 @@
         </span>
         </mat-error>
         <mat-form-field hintLabel="Minimum eight characters, at least one letter and one number !!">
-            <input matInput placeholder="Password" formControlName="password" [type]="hide ? 'password':'text'"[(ngModel)]="password"/>
+            <input matInput placeholder="Password" formControlName="password" [type]="hide ? 'password':'text'"/>
             <mat-icon matSuffix (click)="hide = !hide">
-              {{hide ? 'visibility':'visibility_off'}}
+                {{hide ? 'visibility_off':'visibility'}}
             </mat-icon>
         </mat-form-field>
         <mat-error [hidden]="loginForm.get('password').valid && loginForm.get('password').untouched">  
