--- a/src/src/app/auth/signup/signup.component.html
+++ b/src/src/app/auth/signup/signup.component.html
@@ -112,7 +112,7 @@
       </div>
     </div>
 
-    <mat-checkbox ngModel name="agree" color="primary"required>Agree to Terms and Conditions.</mat-checkbox>
-    <button type="submit" mat-raised-button color="primary" [disabled] = "!registerForm.valid"(click)="onSubmit()">Submit</button>
+    <mat-checkbox name="agree" color="primary"required>Agree to Terms and Conditions.</mat-checkbox>
+    <button type="submit" mat-raised-button color="primary" [disabled] = "!registerForm.valid">Submit</button>
   </form>
 </section>
