--- a/src/src/app/foods/food-list/food-list.component.html
+++ b/src/src/app/foods/food-list/food-list.component.html
@@ -1,17 +1,17 @@
 <div class="item item-1" fxFlex="20%">
-    <ul>
-        <li>South Indian</li>
-        <li>North Indian</li>
-        <li>Desserts</li>
-        <li>Biryani </li>
-        <li>Starters</li>
-    </ul>
+    <ul style="width: 300px;">
+        <li (click)="searchCategory('southindian')"><a>South Indian</a></li>
+        <li (click)="searchCategory('northindian')"><a>North Indian</a></li>
+        <li (click)="searchCategory('desserts')"><a>Desserts</a></li>
+        <li (click)="searchCategory('biryani')"><a>Biryani</a></li>
+        <li (click)="searchCategory('starters')"><a>Starters</a></li>
+      </ul>
 </div>
 
 <div class="item item-2" fxFlex fxFlexOrder="1" fxFlex="80%">
     
     <div fxFlex fxFlexOrder="1" fxFlex="40%">
-        <h3>South Indian</h3>
+        <h3>Food List</h3>
         <br>
         <mat-card class="example-card" *ngFor = "let food of foods$ | async ">
             <mat-card-content>
